# agi_house_hackathon

./: README.md  agent_interface_specification.md  marketplace_requirements.md  notes.txt
backend/: Dockerfile  pyproject.toml  pytest.ini  test_results.json
backend/app/: analyze_image.py  check_openai.py  heading_processor.py  list_models.py  main.py  matrix_types.py  ocr_processor.py  validation.py
backend/test_results/: format_comparison_results.txt  reference_comparison.md
backend/tests/: test_format_comparison.py  test_heading_processor.py  test_ltv_heading.py  test_requirement_headings.py  test_spanning_data.py  test_validation.py
fannie_rag/: README.md  index.html  index.js  package.json
fannie_rag_agent/: README.md  fly.toml  pyproject.toml
fannie_rag_agent/app/: logic.py  models.py  rag_agent_main.py
frontend/: .env.production  package-lock.json  test_results.json
marketplace/agent_marketplace/: .env  Dockerfile  README.md  diagnostic.py  fly.toml  pyproject.toml  run_server.py
marketplace/agent_marketplace/app/: database.py  main.py  models.py
marketplace/agent_marketplace/app/routes/: agents.py
marketplace/agent_marketplace/app/services/: embedding.py
marketplace/agent_marketplace/tests/: test_find_and_invoke.py
marketplace/marketplace-frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
marketplace/marketplace-frontend/src/: App.tsx  types.ts
marketplace/marketplace-frontend/src/components/agents/: AgentCard.tsx  AgentList.tsx  InvokeAgent.tsx  RegisterAgent.tsx
marketplace/marketplace-frontend/src/lib/: api.ts
matrix-processor/backend/: .env  pyproject.toml
matrix-processor/backend/app/: analyze_image.py  analyze_results.py  ocr_processor.py  validation.py
matrix-processor/backend/test_results/: test_run_2.json
matrix-processor/frontend/src/: App.tsx
matrix_processor_agent/: .gitignore  README.md
matrix_processor_agent/backend/: .apt  .coverage  .env.template  README.md  pytest.ini.template  response.json  test_ocr.py
matrix_processor_agent/backend/app/: analyze_image.py  heading_processor.py  main.py  matrix_types.py  ocr_processor.py  validation.py  verify_accuracy.py
matrix_processor_agent/backend/test_results/: approach_1_results.md  approach_2_results.md  format_comparison.md
matrix_processor_agent/backend/tests/: check_openai_config.py  test_heading_processor.py  test_performance.py  test_requirements_section.py  test_spanning_data.py  test_validation.py
matrix_processor_agent/frontend/: .env.production.template  .env.template  package.json  tailwind.config.js
matrix_processor_agent/frontend/src/components/ui/: alert.tsx
mock_agent/: Dockerfile  pyproject.toml  register_agents.py  run_agents.sh
mock_agent/app/: main.py  main_closing.py  main_funding.py  main_loan_doc.py  main_quality.py  main_underwriting.py
