[tool.poetry]
name = "mock-agent"
version = "0.1.0"
description = "A mock AI agent implementing the marketplace interface"
authors = ["Devin <devin@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.7"}
uvicorn = "^0.34.0"
jsonschema = "^4.23.0"
packaging = "^24.2"
aiohttp = "^3.11.11"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
