[tool.poetry]
name = "app"
version = "0.1.0"
description = "AI Agent Marketplace - A platform for self-hosted AI agents"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.7"}
psycopg = {extras = ["binary"], version = "^3.2.4"}
pydantic = "^2.10.6"
uvicorn = "^0.34.0"
sentence-transformers = "^3.4.0"
python-multipart = "^0.0.20"
packaging = "^24.2"
redis = "^5.0.1"
numpy = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
